crates/ods-web/tests/snapshots/state_pages__run.snap
---
source: crates/ods-web/tests/state_pages.rs
expression: pretty(&body)
---
{
  "built": [
    {
      "changes": [
        {
          "added": [],
          "changed": [
            "sql"
          ],
          "kind": "code",
          "removed": []
        }
      ],
      "name": "customers",
      "node": "model.customers",
      "why": "code: sql changed"
    },
    {
      "changes": [
        {
          "after": "4c0b5c8f-0000-4000-8000-000000000003",
          "before": "9ea38bd5-0000-4000-8000-000000000002",
          "kind": "upstream",
          "parent": "model.customers"
        }
      ],
      "name": "customers_view",
      "node": "model.customers_view",
      "why": "reads customers, which was rebuilt"
    }
  ],
  "compared_with": {
    "run_id": "9ea38bd5-0000-4000-8000-000000000002",
    "short_run_id": "9ea38bd5",
    "snapshot": 2
  },
  "earlier": [
    {
      "at": "2026-09-29T00:01:03Z",
      "built": 2,
      "command": null,
      "duration": null,
      "failed": null,
      "from_last_run": false,
      "kept": 1,
      "kept_state": null,
      "no_journal": "no run journal: the run predates run journals, recorded a build it didn't run (e.g. `ods state record`), or its journal was pruned (the newest 50 are kept)",
      "outcome": "recorded",
      "outcome_from": "snapshot",
      "outcome_inferred": false,
      "outcome_note": "Recorded: its successful builds are the new state. It has no run journal, so whether other nodes failed isn't known.",
      "recorded_at": "2026-09-29T00:01:03Z",
      "replaces": 1,
      "run_id": "9ea38bd5-0000-4000-8000-000000000002",
      "short_run_id": "9ea38bd5",
      "skipped": null,
      "snapshot": 2,
      "stats": null,
      "target": {
        "kind": "warehouse",
        "name": "dev"
      },
      "triggered_by": null
    },
    {
      "at": "2026-09-29T00:00:15Z",
      "built": 1,
      "command": null,
      "duration": null,
      "failed": null,
      "from_last_run": false,
      "kept": 0,
      "kept_state": null,
      "no_journal": "no run journal: the run predates run journals, recorded a build it didn't run (e.g. `ods state record`), or its journal was pruned (the newest 50 are kept)",
      "outcome": "recorded",
      "outcome_from": "snapshot",
      "outcome_inferred": false,
      "outcome_note": "Recorded: its successful builds are the new state. It has no run journal, so whether other nodes failed isn't known.",
      "recorded_at": "2026-09-29T00:00:15Z",
      "replaces": null,
      "run_id": "e6f54fe3-0000-4000-8000-000000000001",
      "short_run_id": "e6f54fe3",
      "skipped": null,
      "snapshot": 1,
      "stats": null,
      "target": {
        "kind": "warehouse",
        "name": "dev"
      },
      "triggered_by": null
    }
  ],
  "last_run": null,
  "nodes": [],
  "relation_links": {},
  "run": {
    "at": "2026-09-29T00:02:37Z",
    "built": 2,
    "command": null,
    "duration": null,
    "failed": null,
    "from_last_run": false,
    "kept": 1,
    "kept_state": null,
    "no_journal": "no run journal: the run predates run journals, recorded a build it didn't run (e.g. `ods state record`), or its journal was pruned (the newest 50 are kept)",
    "outcome": "recorded",
    "outcome_from": "snapshot",
    "outcome_inferred": false,
    "outcome_note": "Recorded: its successful builds are the new state. It has no run journal, so whether other nodes failed isn't known.",
    "recorded_at": "2026-09-29T00:02:37Z",
    "replaces": 2,
    "run_id": "4c0b5c8f-0000-4000-8000-000000000003",
    "short_run_id": "4c0b5c8f",
    "skipped": null,
    "snapshot": 3,
    "stats": null,
    "target": {
      "kind": "warehouse",
      "name": "dev"
    },
    "triggered_by": null
  },
  "schema_version": 3,
  "scope": "jaffle_ods/dev",
  "started_at": null,
  "state_rule": "Snapshot 3 replaced snapshot 2 with this run's successful builds; every other node keeps its last good build. Whether any node failed isn't stored for this run: it has no run journal.",
  "threads": {
    "critical_inferred": false,
    "critical_path": [],
    "critical_took": null,
    "finishes_only": [],
    "span_ms": null,
    "threads": [],
    "untimed": "No node ran in this run, or it has no journal."
  },
  "timeline": [
    {
      "built": false,
      "duration": null,
      "end_offset_ms": null,
      "kept_from": "e6f54fe3-0000-4000-8000-000000000001",
      "kind": "seed",
      "lane": 0,
      "name": "raw_orders",
      "node": "seed.raw_orders",
      "start_offset_ms": null,
      "status": null
    },
    {
      "built": true,
      "duration": null,
      "end_offset_ms": null,
      "kept_from": null,
      "kind": "model",
      "lane": 0,
      "name": "customers",
      "node": "model.customers",
      "start_offset_ms": null,
      "status": null
    },
    {
      "built": true,
      "duration": null,
      "end_offset_ms": null,
      "kept_from": null,
      "kind": "model",
      "lane": 1,
      "name": "customers_view",
      "node": "model.customers_view",
      "start_offset_ms": null,
      "status": null
    }
  ]
}
