crates/ods-web/tests/snapshots/state_pages__runs_failed_partial.snap
---
source: crates/ods-web/tests/state_pages.rs
expression: pretty(&body)
---
{
  "ci": "CI runs — coming with server mode",
  "empty": null,
  "facets": [
    {
      "key": "outcome",
      "label": "Outcome",
      "options": [
        {
          "count": 3,
          "label": "All",
          "selected": true,
          "value": ""
        },
        {
          "count": 2,
          "label": "Recorded",
          "selected": false,
          "value": "recorded"
        },
        {
          "count": 0,
          "label": "Succeeded",
          "selected": false,
          "value": "succeeded"
        },
        {
          "count": 1,
          "label": "Failed",
          "selected": false,
          "value": "failed"
        }
      ],
      "unavailable": null
    },
    {
      "key": "command",
      "label": "Command",
      "options": [
        {
          "count": 3,
          "label": "All",
          "selected": true,
          "value": ""
        }
      ],
      "unavailable": "Snapshots don't record their command yet"
    },
    {
      "key": "target",
      "label": "Target",
      "options": [
        {
          "count": 3,
          "label": "All",
          "selected": true,
          "value": ""
        },
        {
          "count": 3,
          "label": "dev",
          "selected": false,
          "value": "dev"
        }
      ],
      "unavailable": null
    },
    {
      "key": "date",
      "label": "Date",
      "options": [
        {
          "count": 3,
          "label": "All",
          "selected": true,
          "value": ""
        },
        {
          "count": 3,
          "label": "Last day",
          "selected": false,
          "value": "1d"
        },
        {
          "count": 3,
          "label": "Last 7 days",
          "selected": false,
          "value": "7d"
        },
        {
          "count": 3,
          "label": "Last 30 days",
          "selected": false,
          "value": "30d"
        }
      ],
      "unavailable": null
    }
  ],
  "failed": 1,
  "filtered": false,
  "last_run": {
    "command": "ods state build --select +customers_view",
    "command_name": "ods state build",
    "failed": [
      {
        "name": "model.orders",
        "node": "model.orders"
      }
    ],
    "failed_source_tests": [],
    "file": {
      "full": "/home/me/p/.ods/state.db.last-run.json",
      "shown": "/home/me/p/.ods/state.db.last-run.json"
    },
    "last_good": 3,
    "next": [
      {
        "command": "ods state retry --failed",
        "does": "builds only what failed or was skipped because of it, still planned; what succeeded isn't repeated"
      },
      {
        "command": "ods state retry",
        "does": "plans again and also builds what changed since"
      }
    ],
    "outcome_known": true,
    "recorded_nothing_inferred": false,
    "scope": "jaffle_ods/dev",
    "skipped": [
      {
        "name": "model.orders_view",
        "node": "model.orders_view"
      }
    ],
    "snapshot": 3,
    "started_at": "2026-09-29T00:02:00Z"
  },
  "last_run_listed": false,
  "limit": 50,
  "listed": 3,
  "project": "jaffle_ods",
  "recorded": [
    "Each run that recorded something is a snapshot: which nodes it built, and the last good build of every other node.",
    "A snapshot doesn't record which of the other nodes were reused, left out or failed, so they read kept earlier build.",
    "Failures are only known for the last run, kept beside the store for `ods state retry`, and shown only for the target it ran for. It is tied to the snapshot that records its run id; that it recorded nothing is inferred.",
    "Durations, start times, commands of earlier runs and who ran them aren't recorded yet."
  ],
  "recorded_snapshots": 3,
  "runs": [
    {
      "built": 2,
      "command": "ods state build --select +customers_view",
      "duration": null,
      "failed": 1,
      "from_last_run": true,
      "kept": 1,
      "outcome": "failed",
      "recorded_at": "2026-09-29T00:02:37Z",
      "replaces": 2,
      "run_id": "4c0b5c8f-0000-4000-8000-000000000003",
      "short_run_id": "4c0b5c8f",
      "skipped": 1,
      "snapshot": 3,
      "target": {
        "kind": "warehouse",
        "name": "dev"
      },
      "triggered_by": null
    },
    {
      "built": 2,
      "command": null,
      "duration": null,
      "failed": null,
      "from_last_run": false,
      "kept": 1,
      "outcome": "recorded",
      "recorded_at": "2026-09-29T00:01:03Z",
      "replaces": 1,
      "run_id": "9ea38bd5-0000-4000-8000-000000000002",
      "short_run_id": "9ea38bd5",
      "skipped": null,
      "snapshot": 2,
      "target": {
        "kind": "warehouse",
        "name": "dev"
      },
      "triggered_by": null
    },
    {
      "built": 1,
      "command": null,
      "duration": null,
      "failed": null,
      "from_last_run": false,
      "kept": 0,
      "outcome": "recorded",
      "recorded_at": "2026-09-29T00:00:15Z",
      "replaces": null,
      "run_id": "e6f54fe3-0000-4000-8000-000000000001",
      "short_run_id": "e6f54fe3",
      "skipped": null,
      "snapshot": 1,
      "target": {
        "kind": "warehouse",
        "name": "dev"
      },
      "triggered_by": null
    }
  ],
  "schema_version": 1,
  "scope": "jaffle_ods/dev",
  "selected": "4c0b5c8f-0000-4000-8000-000000000003",
  "state": "recorded",
  "store": {
    "full": ".ods/state.db",
    "shown": ".ods/state.db"
  },
  "total": 3,
  "total_capped": false,
  "unfiltered": 3,
  "unscoped_last_run": null
}
